--- a/css/styles.css
+++ b/css/styles.css
@@ -216,13 +216,23 @@ p {
 	}
 
 	h3.welcome {
-		margin-bottom: -3em;
+		margin-bottom: -6em;
 	}
 
 	.carousel-caption h3 {
 		margin-top: 20em;
 		font-size: 75%;
 	}
+
+	.carousel-caption h1 {
+		margin-top: 3em;
+		font-size: 2em;
+	}
+
+	.carousel-caption p {
+		width: 100%;
+	}
+
 	.carousel-caption {
 		font-size: 50%;
 	}
@@ -234,6 +244,7 @@ p {
 	}
 	.intro p {
 		font-size: 0.9em;
+		width: 50%;
 	}
 }
 
