--- a/css/styles.css
+++ b/css/styles.css
@@ -205,63 +205,9 @@ p {
 	margin: 0 0.75rem;
 }
 
-@media (max-width: 480px) {
-	.skills {
-		width: 100%;
-		text-align: center;
-	}
-
-	#skill_list li {
-		text-align: left;
-	}
-
-	h3.welcome {
-		margin-bottom: -6em;
-		font-size: 2em;
-	}
-
-	.carousel-caption h3 {
-		margin-top: 20em;
-		font-size: 75%;
-	}
-
-	.carousel-caption h1 {
-		margin-top: 3em;
-		font-size: 2em;
-	}
-
-	.carousel-caption p {
-		width: 100%;
-	}
-
-	.carousel-caption {
-		font-size: 50%;
-	}
-	.address h2 {
-		font-size: 90%;
-	}
-	h2.email-address  {
-		font-size: 90%;
-	}
-	.intro p {
-		font-size: 0.9em;
-		width: 100%;
-	}
-}
-
-@-ms-viewport {
-	width: device-width;
-}
-
  
 .intro {
 	width: 35rem;
-}
- 
-footer {
-	text-align: center;
-	padding: 2.5% 0;
-	bottom: 0;
 }
  
 .big-paragraph {
@@ -305,4 +251,59 @@ footer {
 
 .address {
 	text-align: center;
+}
+
+footer {
+	text-align: center;
+	padding: 2.5% 0;
+	bottom: 0;
+}
+
+/* RESPONSIVE STYLES */
+
+@media (max-width: 480px) {
+	.skills {
+		width: 100%;
+		text-align: center;
+	}
+
+	#skill_list li {
+		text-align: left;
+	}
+
+	h3.welcome {
+		margin-bottom: -6em;
+	}
+
+	.carousel-caption h3 {
+		margin-top: 20em;
+		font-size: 75%;
+	}
+
+	.carousel-caption h1 {
+		margin-top: 3em;
+		font-size: 2em;
+	}
+
+	.carousel-caption p {
+		width: 100%;
+	}
+
+	.carousel-caption {
+		font-size: 50%;
+	}
+	.address h2 {
+		font-size: 90%;
+	}
+	h2.email-address  {
+		font-size: 90%;
+	}
+	.intro p {
+		font-size: 0.9em;
+		width: 100%;
+	}
+}
+
+@-ms-viewport {
+	width: device-width;
 }
