--- a/css/styles.css
+++ b/css/styles.css
@@ -182,10 +182,7 @@ footer p {
  
 /* POSITIONING */
 
-#contact > .container {
-	width: 70%;
-	margin: 0 auto;
-}
+
 
 
 .container {
@@ -237,8 +234,49 @@ p {
 .intro {
 	width: 35rem;
 }
+
+#portfolio h1 {
+	padding-top: 1em;
+}
+
+/* FAQ */
+
+.learn-more {
+	text-align: left;
+	float: left;
+}
+
+#FAQ h1 {
+	padding-top: 1em;
+} 
+
+.modal-button {
+	float: right;
+	padding-top: 4.25em;
+	padding-right: 1em;
+}
  
-.big-paragraph {
+.modal-body {
+	height: 500px;
+}
+
+#resume {
+	padding: 10px;
+	width: 100%;
+	height: 100%;
+}
+
+.form-group > .form-control {
+	width: 70%;
+}
+
+/* CONTACT */
+
+.contact-h1 {
+	padding-top: 1em;
+}
+
+ .contact-heading {
 	margin: 2.5% 20% 0 20%;
 	text-align: center;
 }
@@ -254,11 +292,6 @@ p {
 	font-style: italic;
 	font-weight: 300;
 }
-
-.form-group > .form-control {
-	width: 70%;
-}
- 
 .address {
 	margin-top: 2.5%;
 }
@@ -287,6 +320,13 @@ p {
 
 .address {
 	text-align: center;
+}
+
+
+
+#contact > .container {
+	width: 70%;
+	margin: 0 auto;
 }
 
 footer {
@@ -328,6 +368,7 @@ footer {
 	.carousel-caption {
 		font-size: 50%;
 	}
+
 	.address h2 {
 		font-size: 90%;
 	}
