--- a/css/styles.css
+++ b/css/styles.css
@@ -242,8 +242,7 @@ p {
 /* FAQ */
 
 .learn-more {
-	text-align: left;
-	float: left;
+	text-align: center;
 }
 
 #FAQ h1 {
@@ -252,7 +251,7 @@ p {
 
 .modal-button {
 	float: right;
-	padding-top: 4.2em;
+	margin-top: -3em;
 	padding-right: 1em;
 }
  
@@ -367,6 +366,16 @@ footer {
 
 	.carousel-caption {
 		font-size: 50%;
+	}
+
+	.learn-more {
+		float: left;
+		text-align: left;
+	}
+
+	.modal-button {
+		float: right;
+		padding: 1em;
 	}
 
 	.address h2 {
