--- a/css/styles.css
+++ b/css/styles.css
@@ -252,11 +252,11 @@ p {
 }
  
 .modal-body {
-	height: 31.25em;
+	height: 500px;
 }
 
 #resume {
-	padding: 0.625em;
+	padding: 10px;
 	width: 100%;
 	height: 100%;
 }
