--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3089,7 +3089,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
+  background-color: #376a74;
   border-color: #2e6da4;
 }
 .btn-primary:hover,
